--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,15 @@
 body {
   font-family: 'NomDeLaPolice', sans-serif; /* Utilisation de la police Google Fonts */
-  background-image: url('https://cdn.pixabay.com/photo/2019/04/10/12/40/watercolor-4117017_1280.png');
+  background-image: url('https://cdn.pixabay.com/photo/2017/01/24/03/53/plant-2004483_1280.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed; /* Fixer l'image de fond pour qu'elle reste en place pendant le défilement */
+
 }
 
 header {
   text-align: center;
-  color: white; /* Changer la couleur du texte */
+  color: rgb(163, 18, 18); /* Changer la couleur du texte */
 }
 
 main {
@@ -15,24 +17,30 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.9); /* Couleur de fond avec transparence */
+ 
 }
 
 section {
   margin: 20px;
   padding: 10px;
-  border: 1px solid #333; /* Bordure */
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); /* Ombre */
+  border: 1px solid #ff0a0a; /* Bordure */
+  box-shadow: 5px 5px 10px rgba(131, 131, 131, 0.5); /* Ombre */
   width: 100%;
   max-width: 500px; /* Largeur maximale pour éviter l'élargissement excessif sur les grands écrans */
 }
 
 h1 {
   font-size: 28px; /* Taille de police personnalisée */
+  font-style: oblique;
+  font-size: x-large;
+  
+font-family: 'Roboto', sans-serif;
 }
 
 h2 {
   font-size: 24px; /* Taille de police personnalisée */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 50px;
 }
 
 ul {
@@ -42,6 +50,13 @@ ul {
 
 li {
   margin-bottom: 5px;
+
+  
+  font-size: 28px; /* Taille de police personnalisée */
+  font-style: oblique;
+  font-size: x-large;
+  
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Media queries pour le design adaptatif */
@@ -65,7 +80,7 @@ li {
 
 /* Bordure simple */
 section {
-  border: 2px solid #333; /* Couleur, épaisseur et style de la bordure */
+  border: 2px solid #93eb0f; /* Couleur, épaisseur et style de la bordure */
 }
 
 /* Bordure arrondie */
@@ -80,30 +95,16 @@ section {
   box-shadow: 5px 5px 10px rgba(255, 4, 4, 0.5); /* Ombre */
 }
 
-/* Bordure avec dégradé */
-section {
-  border: 2px solid transparent; /* Bordure transparente */
-  background-image: linear-gradient(to right, #333, #555); /* Dégradé de couleurs */
+
+
+p
+
+{
+  font-size: 28px; /* Taille de police personnalisée */
+  font-style: oblique;
+  font-size: x-large;
+  
+font-family: 'Roboto', sans-serif;
 }
 
-/* Bordure en pointillés */
-section {
-  border: 2px dashed #333; /* Style en pointillés */
-}
-
-/* Bordure en double */
-section {
-  border: 3px double #333; /* Style de bordure double */
-}
-
-/* Bordure en relief */
-section {
-  border: 2px solid #333;
-  border-style: ridge; /* Style de relief */
-}
-
-/* Bordure en incrustation */
-section {
-  border: 2px inset #333; /* Style en incrustation */
-}
 
